@@ -219,7 +219,7 @@ void attribute_hidden InitOptions(void)
     SEXP val, v;
     char *p;
 
-    PROTECT(v = val = allocList(12));
+    PROTECT(v = val = allocList(13));
 
     SET_TAG(v, install("prompt"));
     SETCAR(v, mkString("> "));
@@ -275,8 +275,13 @@ void attribute_hidden InitOptions(void)
     v = CDR(v);
 
     SET_TAG(v, install("OutDec"));
-    SETCAR(v, allocVector(STRSXP, 1));
-    SET_STRING_ELT(CAR(v), 0, mkChar("."));
+    SETCAR(v, mkString("."));
+    v = CDR(v);
+
+    /* value from Rf_initialize_R */
+    SET_TAG(v, install("rl_word_breaks"));
+    SETCAR(v, mkString(" \t\n\"\\'`><=+-*%;,|&{()}"));
+    set_rl_word_breaks(" \t\n\"\\'`><=+-*%;,|&{()}");
 
     SET_SYMVALUE(install(".Options"), val);
     UNPROTECT(1);
@@ -502,6 +507,12 @@ SEXP attribute_hidden do_options(SEXP call, SEXP op, SEXP args, SEXP rho)
 		k = asLogical(argi);
 		R_WarnEscapes = k;
 		SET_VECTOR_ELT(value, i, SetOption(tag, ScalarLogical(k)));
+	    }
+	    else if (streql(CHAR(namei), "rl_word_breaks")) {
+		if (TYPEOF(argi) != STRSXP || LENGTH(argi) != 1)
+		    errorcall(call, _("rl_word_breaks parameter invalid"));
+		set_rl_word_breaks(CHAR(STRING_ELT(argi, 0)));
+		SET_VECTOR_ELT(value, i, SetOption(tag, duplicate(argi)));
 	    }
 	    else {
 		SET_VECTOR_ELT(value, i, SetOption(tag, duplicate(argi)));
