@@ -21,6 +21,12 @@ NEW FEATURES
     o	C-level warning calls now print a more informative context,
 	as C-level errors have for a while.
 
+    o	There is a new option "rl_word_breaks" to control the way the
+	input line is tokenized in the readline-based terminal
+	interface for object- and file-name completion.
+	This allows it to be tuned for people who use their space bar
+	vs those who do not.
+
 
 INSTALLATION
 
